# noisebell-client-template

./: Cargo.toml  README.md  deploy.sh
src/: client.rs  lib.rs  logging.rs  main.rs  models.rs
